// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Correctly - Desktop 1`] = `
<div
  id="menu"
>
  <!---->
   
  <h1>
    <router-link-stub
      to="/"
    >
      Munro
    </router-link-stub>
  </h1>
   
  <div
    class="actions"
    name="shrink"
  >
    <router-link-stub
      to="/leagues"
    >
      Leagues
    </router-link-stub>
     
    <router-link-stub
      to="/upload"
    >
      Upload Results
    </router-link-stub>
     
    <router-link-stub
      to="/login"
    >
      Admin Login
    </router-link-stub>
  </div>
</div>
`;

exports[`Renders Correctly - Mobile 1`] = `
<div
  id="menu"
>
  <svg
    class=""
    viewBox="0 0 24 24"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
     
    <path
      d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
    />
  </svg>
   
  <h1>
    <router-link-stub
      to="/"
    >
      Munro
    </router-link-stub>
  </h1>
   
  <div
    class="actions"
    name="shrink"
    style="display: none;"
  >
    <router-link-stub
      to="/leagues"
    >
      Leagues
    </router-link-stub>
     
    <router-link-stub
      to="/upload"
    >
      Upload Results
    </router-link-stub>
     
    <router-link-stub
      to="/login"
    >
      Admin Login
    </router-link-stub>
  </div>
</div>
`;
